[package]
name = "llm-io-guard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Offline, in-process input/output safety scanners for LLM apps (PII vault, prompt-injection, secrets, URLs)."

[dependencies]
regex = "1.12"
aho-corasick = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
