[package]
name = "llm-io-guard-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js (napi-rs) binding for llm-io-guard."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
llm-io-guard-core = { path = "../llm-io-guard-core" }

[build-dependencies]
napi-build = "2"
